Beta 2 countdown, tile chain opts

--- a/gw2t-tile.css
+++ b/gw2t-tile.css
@@ -67,7 +67,8 @@ body, #paneContent article {
 
 #itemLanguage {
 	position: absolute;
-	padding-top: 16px;
+	padding-top: 12px;
+	padding-bottom: 0;
 	right: 96px;
 	bottom: auto;
 	left: auto;
@@ -86,20 +87,18 @@ body, #paneContent article {
 	padding-bottom: 4px;
 }
 
-#chnOptionsPopup {
-	font-size: 18px;
-}
 #chnOptions:hover #chnOptionsPopup {
-	width: 500px;
+	width: 180px;
 }
-#chnOptionsPopup fieldset {
-	min-width: 180px;
+#chnOptionsRight {
+	width: auto;
+	margin: 0;
+	margin-bottom: 8px;
+	padding: 0;
+	border: none;
 }
-#optAlarmSpeaker {
-	width: 32px; height: 32px;
-}
-#optAlarmIcon {
-	width: 24px; height: 24px;
+#chnOptionsLeft {
+	display: block;
 }
 
 #chnProgress {
@@ -162,13 +161,4 @@ body, #paneContent article {
 
 #plateChains section {
 	text-align: center;
-}
-
-input[type=checkbox] {
-	transform: scale(1.25);
-}
-
-input[type="number"] {
-	width: 64px;
-	font-size: 18px;
 }
