--- a/gw2t.css
+++ b/gw2t.css
@@ -365,6 +365,10 @@ html, body,
 	width: 32px; height: 32px;
 	border-radius: 4px;
 }
+.dsbSaleItem:hover {
+	opacity: 0.9;
+	border-radius: 16px;
+}
 .dsbSalePrice {
 	color: white;
 }
