--- a/gw2t.css
+++ b/gw2t.css
@@ -399,6 +399,7 @@ html, body,
 }
 
 #dsbStory {
+	position: relative;
 	display: none;
 	width: auto; height: 120px;
 	border-bottom: 1px solid #dd9900;
@@ -1159,6 +1160,7 @@ header.jsSection sup {
 }
 
 #paneContent article {
+	position: relative;
 	width: 360px; height: 100%;
 	overflow: hidden;
 }
