--- a/gw2t.css
+++ b/gw2t.css
@@ -375,7 +375,7 @@ html, body,
 .dsbCountdownActive {
 	color: lime;
 }
-.dsbSaleCol {
+#dsbSaleCol0, #dsbSaleCol1 {
 	display: inline-block;
 	vertical-align: top;
 }
