--- a/gw2t.css
+++ b/gw2t.css
@@ -1943,20 +1943,20 @@ coppercoin {
 	background-position: -16px 0;
 }
 silvercoin {
-	background-position: -32px 0;
-}
-goldcoin {
 	background-position: -48px 0;
 }
+goldcoin {
+	background-position: -32px 0;
+}
 
-.rarity0, input[type="text"].rarity0 { color: #aaaaaa; /* junk gray */ }
-.rarity1, input[type="text"].rarity1 { color: #ffffff; /* basic white */ }
-.rarity2, input[type="text"].rarity2 { color: #5599ff; /* fine blue */ }
-.rarity3, input[type="text"].rarity3 { color: #33cc11; /* masterwork green */ }
-.rarity4, input[type="text"].rarity4 { color: #ffdd22; /* rare yellow */ }
-.rarity5, input[type="text"].rarity5 { color: #ffaa00; /* exotic orange */ }
-.rarity6, input[type="text"].rarity6 { color: #ff4488; /* ascended magenta */ }
-.rarity7, input[type="text"].rarity7 { color: #9933ff; /* legendary violet */ }
+.rarity0 { color: #aaaaaa !important; /* junk gray */ }
+.rarity1 { color: #ffffff !important; /* basic white */ }
+.rarity2 { color: #5599ff !important; /* fine blue */ }
+.rarity3 { color: #33cc11 !important; /* masterwork green */ }
+.rarity4 { color: #ffdd22 !important; /* rare yellow */ }
+.rarity5 { color: #ffaa00 !important; /* exotic orange */ }
+.rarity6 { color: #ff4488 !important; /* ascended magenta */ }
+.rarity7 { color: #9933ff !important; /* legendary violet */ }
 
 /* =============================================================================
  *  @@Palette color derived from GW2 user interface.
