--- a/style/overlay.css
+++ b/style/overlay.css
@@ -60,6 +60,15 @@
 		1px 1px 1px #000;
 	opacity: 0.9;
 }
+#mapZones:hover #mapZonesPopup {
+	padding: 0px 2px 0px 2px;
+}
+#mapZoneList {
+	line-height: 120%;
+}
+#mapZoneList h2 {
+	font-size: 14px;
+}
 
 /* Lower the menu bar's height */
 #paneMenu {
