--- a/style/features.css
+++ b/style/features.css
@@ -385,7 +385,8 @@ dt.jpzListNameHover {
 .mapNeedle0 { border: 2px solid lime; }
 .mapNeedle1 { border: 2px solid red; }
 .mapNeedle2 { border: 2px solid white; }
-.mapNeedleExtreme { border-width: 6px; }
+.mapNeedleExtreme0, .mapNeedleExtreme3 { border-width: 6px; border-style: solid; }
+.mapNeedleExtreme1 { border-width: 4px; border-style: dotted; }
 
 
 /* =============================================================================
