--- a/style/overlay.css
+++ b/style/overlay.css
@@ -69,6 +69,9 @@
 #mapZoneList h2 {
 	font-size: 14px;
 }
+#mapZoneList ul {
+	margin-bottom: 8px;
+}
 
 /* Lower the menu bar's height */
 #paneMenu {
