--- a/gw2t.css
+++ b/gw2t.css
@@ -469,6 +469,9 @@ html, body,
 	font-weight: bold;
 	color: #ddff77;
 }
+.tmlSegmentTimestampFutureFar {
+	color: #ccc;
+}
 .tmlSegmentActive {
 	background: rgba(255, 136, 68, 0.2);
 	outline: 1px solid rgba(0, 0, 0, 0.2);;
@@ -1566,15 +1569,24 @@ textarea.jsCopyCode {
 
 /* @@Chains plate
 ----------------------------------------------------------------------------- */
-#chnProgress {
+#chnProgressBar {
 	position: fixed;
 	margin-top: 1px;
-	width: 360px;
-	height: 1px;
+	width: 360px; height: 1px;
+	z-index: 2;
+}
+#chnProgress0, #chnProgress1 {
+	display: block;
+	float: left;
+	width: 100%; height: 100%;
 	border-radius: 2px;
 	background: none;
 	box-shadow: 0px 0px 4px #444;
-	z-index: 2;
+}
+#chnProgress1 {
+	right: 0;
+	box-shadow: 0px 0px 4px #444;
+	background: linear-gradient(to left, black 0%, white 100%);
 }
 
 #chnOptions {
