--- a/style/tile.css
+++ b/style/tile.css
@@ -93,8 +93,8 @@ body, #paneContent article {
 	display: block;
 }
 
-#chnProgress {
-	height: 4px;
+#chnProgressBar {
+	width: 100%; height: 4px;
 }
 
 .chnBar, .chnSlot {
