--- a/style/tile.css
+++ b/style/tile.css
@@ -9,7 +9,6 @@ html, body {
 	background: linear-gradient(to right, #111 0%, #383838 50%, #111 100%);
 }
 
-
 #cslButtons {
 	position: fixed;
 	bottom: 24px;
@@ -17,6 +16,13 @@ html, body {
 
 #panelMap, #paneClock, #paneMenu, .chnEvents {
 	display: none;
+}
+
+#itemTimeline {
+	position: relative;
+	bottom: auto;
+	margin-top: 24px;
+	margin-bottom: 24px;
 }
 
 #windowMain {
