--- a/style/tile.css
+++ b/style/tile.css
@@ -113,7 +113,10 @@ body, #paneContent article {
 	max-width: 360px;
 	margin-bottom: 8px;
 	margin-right: 8px;
-	border: 2px solid black;
+	border-top: 2px solid #222;
+	border-left: 2px solid #222;
+	border-right: 4px solid black;
+	border-bottom: 4px solid black;
 }
 
 .chnTitle img {
