--- a/style/overlay.css
+++ b/style/overlay.css
@@ -25,7 +25,22 @@
 	margin-bottom: 2px;
 	padding: 1px 2px 1px 4px;
 }
+#tmlClose {
+	top: 0;
+	left: 0;
+}
+#tmlToggle {
+	top: 0px;
+	left: 32px;
+}
+#itemTimeline {
+	width: 100%;
+	margin: auto;
+	top: 0;
+	bottom: auto;
+}
 #itemDashboard {
+	bottom: 32px; top: auto; right: 12px;
 	line-height: 120%;
 	font-size: 14px;
 }
