--- a/gw2t.css
+++ b/gw2t.css
@@ -108,8 +108,7 @@ img {
 #cslContent, #itemWarning {
 	max-width: 62%;
 	max-height: 95%;
-	position: fixed;
-	z-index: 10;
+	position: fixed; z-index: 10;
 	top: 24px;
 	left: 24px;
 	font-family: monospace;
@@ -133,8 +132,7 @@ img {
 	opacity: 0.3;
 }
 #cslButtons {
-	position: absolute;
-	z-index: 11;
+	position: absolute; z-index: 11;
 	left: 8px;
 	top: 8px;
 }
@@ -338,6 +336,7 @@ html, body,
 ----------------------------------------------------------------------------- */
 .itemContext {
 	display: none;
+	min-width: 150px;
 	position: fixed; z-index: 1000;
 	border: 2px solid #aaa;
 	border-radius: 2px;
@@ -361,6 +360,19 @@ html, body,
 }
 .itemContext li:hover {
 	background: linear-gradient(to right, #7c7253 0%, #212021 100%);
+}
+.itemContextSubmenu ul {
+	display: none;
+}
+.itemContextSubmenu:hover ul {
+	display: inline-block;
+	position: absolute; z-index: 2;
+	left: 50%;
+	white-space: nowrap;
+	border: 2px solid #aaa;
+	border-radius: 2px;
+	background: #212021;
+	opacity: 0.9;	
 }
 
 /* Composition container for default writing style
@@ -621,11 +633,10 @@ textarea.jsCopyCode {
 /* Bottom side: Timeline */
 #itemTimeline {
 	display: none;
-	position: absolute;
+	position: absolute; z-index: 1;
 	bottom: 48px;
 	margin-left: 24px;
 	width: calc(100% - 48px);
-	z-index: 1;
 	white-space: nowrap;
 }
 #tmlIndicator {
@@ -663,8 +674,7 @@ textarea.jsCopyCode {
 }
 .tmlLineName {
 	display: table-cell;
-	position: absolute;
-	z-index: 2;
+	position: absolute; z-index: 2;
 	margin-top: -10px;
 	margin-left: 6px;
 	vertical-align: middle;
@@ -723,9 +733,8 @@ textarea.jsCopyCode {
 /* Top right corner: Dashboard */
 #itemDashboard {
 	display: none;
-	position: absolute;
+	position: absolute; z-index: 2;
 	top: 32px; right: 12px;
-	z-index: 2;
 	margin-left: 24px;
 	margin-top: 4px;
 	padding: 4px 10px 4px 10px;
@@ -746,10 +755,9 @@ textarea.jsCopyCode {
 	opacity: 0.8;
 }
 #dsbClose, #tmlDelete, #tmlClose, #tmlToggle {
-	position: absolute;
+	position: absolute; z-index: 1;
 	top: -16px;
 	left: -16px;
-	z-index: 1;
 	width: 32px; height: 32px;
 	background: url("img/ui/close.png");
 	opacity: 0.4;
@@ -863,9 +871,8 @@ textarea.jsCopyCode {
 
 /* Bottom left corner: Coordinates bar */
 .mapCoordinates {
-	position: absolute;
+	position: absolute; z-index: 9;
 	bottom: 12px; left: 12px;
-	z-index: 9;
 }
 .mapCoordinates input, .cssInputText {
 	display: inline-block;
@@ -891,10 +898,9 @@ input.mapCoordinatesName {
 
 /* Right side: Misc links */
 .mapPeripheral {
-	display: inline-block;
+	display: inline-block; z-index: 3;
 	width: auto; /* Should be just wide enough to fit the HUD buttons */
 	text-align: right;
-	z-index: 3;
 }
 .mapPeripheral:hover {
 	width: 520px; /* This becomes the maximum width of the HUD popup divs */
@@ -1113,10 +1119,10 @@ input.mapCoordinatesName {
 }
 
 .paneApp {
+	z-index: 1;
 	right: 0px; /* This allows the app panel to completely fill the overlay window */
 	border-left: 1px solid #444;
 	box-shadow: -5px 0px 5px #223;
-	z-index: 1;
 }
 
 /* Board (only visible in simple mode)
@@ -1340,12 +1346,11 @@ input.mapCoordinatesName {
 	font-weight: normal;
 }
 #itemHome {
-	position: fixed;
+	position: fixed; z-index: 9;
 	bottom: 0px;
 	right: 10px;
 	color: #eee;
 	opacity: 0.5;
-	z-index: 9;
 }
 #itemHome a {
 	color: #eee;
@@ -1471,14 +1476,13 @@ input.mapCoordinatesName {
 ----------------------------------------------------------------------------- */
 
 .menuBeamContainer {
-	position: fixed;
+	position: fixed; z-index: 1;
 	width: 360px;
 	min-height: 32px;
 	background: url("img/ui/toggle.png") no-repeat center;
 	border-bottom-right-radius: 5px;
 	border-bottom-left-radius: 5px;
 	opacity: 0.5;
-	z-index: 1;
 }
 .menuBeamContainer:hover {
 	background: none;
@@ -1585,10 +1589,9 @@ header.jsSection sup {
 /* @@Chains plate
 ----------------------------------------------------------------------------- */
 #chnProgressBar {
-	position: fixed;
+	position: fixed; z-index: 2;
 	margin-top: 1px;
 	width: 360px; height: 1px;
-	z-index: 2;
 }
 #chnProgress0, #chnProgress1 {
 	display: block;
@@ -1605,11 +1608,10 @@ header.jsSection sup {
 }
 
 #chnOptions {
-	position: absolute;
+	position: absolute; z-index: 2;
 	right: 0;
 	padding: 7px 4px 6px 0px;
 	opacity: 0.5;
-	z-index: 2;
 }
 #chnOptions:hover {
 	opacity: 1;
