--- a/style/features.css
+++ b/style/features.css
@@ -15,7 +15,7 @@
 	margin-bottom: 8px;
 	text-align: center;
 }
-#dlyActivity, #dlyFractal {
+#dlyActivity {
 	margin-top: -16px;
 	text-align: center;
 	white-space: nowrap;
