--- a/style/overlay.css
+++ b/style/overlay.css
@@ -4,8 +4,7 @@
 */
 
 /* Remove elements extraneous or intrusive to overlay mode */
-#itemWarning, #itemDashboard, .mapHUDLinks, #itemSocial,
-#paneMenu var {
+#itemWarning, #itemDashboard, #itemSocial, #paneMenu var, #mapQuickURL, .mapHUDLinks {
 	display: none;
 }
 
